k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: wiz-exercise
spec:
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
